# poprank

./: .gitignore  LICENSE  README.md  poprank.code-workspace  pyproject.toml  requirements.txt  setup.py
.github/: workflow
.github/workflows/: python-app.yml
examples/: chess_engines.py  example_axelrod.py  example_axelrod_evolvable_ANN.py  main.py  ranking_llms.py
examples/chess_engines/: README.md  main.py
examples/fixtures/chess_engines/: loader.py  shortened_games.json
examples/fixtures/football_leagues/: loader.py
examples/fixtures/language_models/: loader.py
examples/football_leagues/: README.md  main.py
examples/football_leagues/fixtures/: en.1.final.json
examples/language_models/: README.md  main.py
src/poprank/: __init__.py  _core.py  alpharank.py  bradleyterry.py  core.py  elo.py  excepts.py  glicko.py  math.py  melo.py  metrics.py  nashavg.py  rates.py  trueskill.py  utils.py  wdl.py
src/poprank/functional/: __init__.py  alpharank.py  bayeselo.py  bradleyterry.py  chain.py  colley.py  elo.py  glicko.py  graphs.py  massey.py  (+7 more)
test/: test_axelrod.py  test_bayeselo  test_bayeselo.py  test_elo.py  test_elo_league.py  test_elo_league_ls.py  test_glicko.py  test_laplacian.py  test_melo.py  test_metrics.py  test_nash_avg.py  test_ranked_league.py  test_ranked_league_ls.py  test_ranking.py  test_score_based_ratings.py  test_trueskill.py  test_wdl.py
test/fixtures/: computer_chess.500k.results.json  computer_chess.short.json  diaconis.metrics.json  football.es.1.final.json  loader.py  synthetic.trueskill.tournament.json  trueskill_tournament.json
(+52 files in other folders)
